src/k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fsh-webapi
  labels:
    app: fsh-webapi
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: fsh-webapi
